--- a/index.html
+++ b/index.html
@@ -1,12 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Expense tracker</title>
+  </head>
+  <body>
+    <h1>Expense Tracker</h1>
+    <div class="input-card">
+      <form>
+        <label for="name">Transaction name:</label>
+        <input
+          type="text"
+          id="name"
+          name="name"
+          placeholder="Your transaction"
+        />
+
+        <div class="first-div">
+          <label for="category">Choose category:</label>
+          <select name="category" id="category">
+            <option value="food">Food & Dining</option>
+            <option value="transportation">Transportation</option>
+            <option value="utilities">Utilities</option>
+          </select>
+
+          <label for="date">Choose Date:</label>
+          <input type="date" id="date" />
+        </div>
+
+        <div class="second-div">
+          <label for="payment-type">Payment type:</label>
+          <label for="cash">Cash</label>
+          <input type="radio" id="cash" name="cash-payment" value="cash" />
+
+          <label for="credit">Credit</label>
+          <input
+            type="radio"
+            id="credit"
+            name="credit-payment"
+            value="credit"
+          />
+          <label for="cash">Debit</label>
+          <input type="radio" id="debit" name="debit-payment" value="debit" />
+        </div>
+
+        <div class="amount-div">
+            <label for="amount">Amount spent:</label>
+            <input
+              type="number"
+              id="amount"
+              name="amount"
+              step="0.01"
+              placeholder="Enter the amount spent"
+            />
+        </div>
+      
+
+        <label for="message">Description:</label>
+        <textarea
+          id="message"
+          name="message"
+          placeholder="Your message"
+        ></textarea>
+
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+  </body>
 </html>
