--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     </div>
     <div class="container">
       <div class="input-card">
+        <h1>Expense</h1>
         <form id="expense-form">
           <label for="name">Transaction name:</label>
           <input
@@ -74,6 +75,10 @@
       <div class="pie-card">
         <h1>Expense Chart</h1>
         <canvas id="pie-chart"></canvas>
+      </div>
+
+      <div class="expense-field">
+        <h1>Your expenses: </h1>
       </div>
     </div>
   </body>
