--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
         <canvas id="pie-chart"></canvas>
       </div>
 
-      <div class="expense-field">
-        <h1>Your expenses: </h1>
+      <div class="expense-container">
+        <div id="expense-field">
+          <h1>Your expenses: </h1>
+        </div>
       </div>
+      
     </div>
   </body>
 </html>
