--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             id="transaction"
             name="transaction"
             placeholder="Your transaction"
+            required
           />
 
           <div class="first-div">
@@ -35,7 +36,7 @@
             </select>
 
             <label for="date">Choose Date:</label>
-            <input type="date" id="date" />
+            <input type="date" id="date" required/>
           </div>
 
           <div class="second-div">
@@ -58,6 +59,7 @@
               name="amount"
               step="0.01"
               placeholder="Enter the amount spent"
+              required
             />
           </div>
 
